criado index.html

--- a/index.html
+++ b/index.html
@@ -1,22 +1,34 @@
  <html>
     <head>
-        <title>Melhores momentos do vasco</title>
+        <title>Olá, meu nome é Pedro Henrique Bazzanella</title>
         <meta charset = "uft8">
     </head>
     <body>
-        <h1>Total de jogos perdidos</h1>
-        <p>O vasco esta nessa onda de azar desde 1997, perdendo diversos campeonatos como o campeonato carioca, brasileirão, libertadores, copa do Brasil entre outros. </p>
-        <img src ="assets\primeiro-escudo-vasco.webp">
-        <h2>Maiores goleadas ja tomadas</h2>
+        <h1>Um pouco sobre mim</h1>
+        <p>Teno 15 anos, moro na cidade de Apiúna localizada no estado de Santa Catarina, teno dois irmãos mais novos uma menina e um menino. </p>
+        <p>Sou atleta nacional de atletismo, treino desde 2022 quando eu tinha 12 anos, já competi em camperonato brasileiro em 2024.</p>
+        <p>Gosto de ler, escrever textos, gosto de cozinhar, jogo futsal de vez em quando pra passar o tempo e gosto de ouvir musicas antigas. </p>
         <p>O vasco ja perdeu pra muitos times que não é novidade, veja a lista a seguir.</p>
-        <p>Vasco 1 x 4 Paraná - 2003.
-            Cruzeiro 4 x 1 Vasco - 2003.
-            Vasco 2 x 5 Palmeiras - 2004.
-            Vitória 4 x 1 Vasco - 2004.
-            Athletico-PR 7 x 2 Vasco - 2005.
-            Figueirense 5 x 1 Vasco - 2005.
-            Juventude 4 x 1 Vasco - 2005.
-            Palmeiras 5 x 2 Vasco - 2005.</p>
-            <img src ="assets/download.jpg">
+        <img src ="assets/foto do manto.png">
+        <h2>Outras coisas sobre mim</h2> 
+        <p>Sou um rapaz um pouco estresado</p> 
+        <p>Tenho diferenças bem visiveis com pessoas  da nova geração</p> 
+        <p>Tenho o sonho de ser campeão das olimpíadas de atletismo</p>
+        <a href="https://www.instagram.com/pedrohbazza/">Da uma olhada no meu instagram</a>
+        <h2>Coisas que eu gosto</h2> 
+        <ul>
+            <li>jogar futsal</li>
+            <li>treinar na chuva</li>
+            <li>assistir filmes e series</li>
+            <li>desenhar</li>
+            <li>conversar com meus amigos</li>
+            <h2>Meus objetivos para o futuro</h2>
+            <ul>
+                <li>me formar no IFC</li>
+                <li>ser campeão brasileiro de atletismo</li>
+                <li>ir para as olimpíadas de 2028</li>
+                <li>ter uma familia</li>
+                <li>ter um vida tranquila</li>
+            </ul>
     </body>
  </html>
